--- a/GUI/SimplePerfChart/DemoApplication.csproj
+++ b/GUI/SimplePerfChart/DemoApplication.csproj
@@ -54,13 +54,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GMap.NET.Core">
-      <HintPath>..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.Core.dll</HintPath>
+      <HintPath>..\..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.Core.dll</HintPath>
     </Reference>
     <Reference Include="GMap.NET.WindowsForms">
-      <HintPath>..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.WindowsForms.dll</HintPath>
+      <HintPath>..\..\..\..\TA\GUI\Release-NETv4.0\GMap.NET.WindowsForms.dll</HintPath>
     </Reference>
     <Reference Include="RabbitMQ.Client">
-      <HintPath>..\..\..\TA\RabbitMQ\bin\RabbitMQ.Client.dll</HintPath>
+      <HintPath>..\..\..\..\TA\RabbitMQ\bin\RabbitMQ.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="RabbitMQ.ServiceModel">
+      <HintPath>..\..\..\..\TA\RabbitMQ\bin\RabbitMQ.ServiceModel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
