--- a/GUI/SpPerfChart/SpPerfChart.csproj
+++ b/GUI/SpPerfChart/SpPerfChart.csproj
@@ -65,6 +65,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Keys\PerfChartDefault.snk" />
     <None Include="packages.config" />
   </ItemGroup>
