--- a/swarm-2.6.2/Swarm.config
+++ b/swarm-2.6.2/Swarm.config
@@ -28,7 +28,7 @@ fdsnDataselectURL=http://service.iris.edu/fdsnws/dataselect/1/query
 
 fdsnStationURL=http://service.iris.edu/fdsnws/station/1/query
 
-hypocenterSource=NONE
+hypocenterSource=MONTH_45
 
 kiosk=false
 
@@ -36,19 +36,19 @@ lastPath=default
 
 mapHeight=510
 
-mapLatitude=54.66454897012458
+mapLatitude=57.30329992590386
 
 mapLineColor=0
 
 mapLineWidth=2
 
-mapLongitude=-146.11283584016496
+mapLongitude=-141.43599710690074
 
 mapMaximized=true
 
 mapPath=mapdata
 
-mapScale=14059.48891663401
+mapScale=28119.0
 
 mapVisible=true
 
