--- a/GUI/SimplePerfChart/packages.config
+++ b/GUI/SimplePerfChart/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="GMap.NET.Windows" version="1.7.9" targetFramework="net461" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="4.1.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net461" />
