--- a/GUI/SimplePerfChart/packages.config
+++ b/GUI/SimplePerfChart/packages.config
@@ -9,4 +9,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net461" />
+  <package id="TweetSharp" version="2.3.1" targetFramework="net461" />
 </packages>
